# libdelorean

./: .gitignore  .travis.yml  CodingStyle.md  Makefile.am  README.md  SConstruct  bootstrap  configure.ac
include/: Makefile  Makefile.am  Makefile.in
include/delorean/: AbstractHistory.hpp  AbstractHistoryFile.hpp  AbstractHistorySink.hpp  AbstractHistorySource.hpp  AbstractHistoryTree.hpp  AbstractMemoryHistory.hpp  AbstractMemoryHistoryTree.hpp  AbstractNode.hpp  AbstractThreadedHistory.hpp  AbstractThreadedHistoryTree.hpp  BasicTypes.hpp  CoreNode.hpp  FixedConfig.hpp  History.hpp  HistoryConfig.hpp  HistoryFileSink.hpp  HistoryFileSource.hpp  HistoryTree.hpp  HistoryTreeConfig.hpp  IHistorySink.hpp  IHistorySource.hpp  IPrintable.hpp  InHistory.hpp  InHistoryTree.hpp  IntervalCreator.hpp  LeafNode.hpp  MemoryHistory.hpp  MemoryHistoryTree.hpp  MemoryInHistory.hpp  MemoryInHistoryTree.hpp  MemoryOutHistory.hpp  MemoryOutHistoryTree.hpp  OutHistory.hpp  OutHistoryTree.hpp  ThreadedHistory.hpp  ThreadedHistoryTree.hpp  ThreadedInHistory.hpp  ThreadedInHistoryTree.hpp  ThreadedOutHistory.hpp  ThreadedOutHistoryTree.hpp
include/delorean/ex/: BranchNodeFull.hpp  ExistingIntervalType.hpp  ExistingIntervalTypeEx.hpp  IO.hpp  IOEx.hpp  IndexOutOfRange.hpp  IntervalOutOfRange.hpp  InvalidFormat.hpp  InvalidFormatEx.hpp  InvalidIntervalArguments.hpp  NodeFull.hpp  NodeFullEx.hpp  TimeRangeEx.hpp  TimestampOutOfRange.hpp  UnknownIntervalType.hpp  UnknownIntervalTypeEx.hpp  UnknownNodeSerDesType.hpp  UnknownNodeType.hpp  UnknownNodeTypeEx.hpp
include/delorean/interval/: AbstractInterval.hpp  FloatInterval.hpp  IIntervalFactory.hpp  Int32Interval.hpp  Int64Interval.hpp  IntInterval.hpp  IntervalDeserializer.hpp  IntervalJar.hpp  IntervalSerializer.hpp  NullInterval.hpp  Simple32BitValueInterval.hpp  Simple64BitValueInterval.hpp  SimpleIntervalFactory.hpp  SimpleValueInterval.hpp  StandardIntervalType.hpp  StandardIntervalTypes.hpp  StringInterval.hpp  UIntInterval.hpp  Uint32Interval.hpp  Uint64Interval.hpp
include/delorean/intervals/: AbstractInterval.hpp  FloatInterval.hpp  FloatIntervalFactory.hpp  IIntervalFactory.hpp  IntInterval.hpp  IntIntervalFactory.hpp  NullInterval.hpp  NullIntervalFactory.hpp  StringInterval.hpp  StringIntervalFactory.hpp  UIntInterval.hpp  UIntIntervalFactory.hpp
include/delorean/node/: AbstractNode.hpp  AbstractNodeCache.hpp  AbstractNodeDeserializer.hpp  AbstractNodeSerDes.hpp  AlignedNodeSerDes.hpp  AlignedNodeSerializer.hpp  BranchNode.hpp  ChildNodePointer.hpp  DirectMappedNodeCache.hpp  LRUNodeCache.hpp  LeafNode.hpp  LruNodeCache.hpp  Node.hpp  NodeDeserializer.hpp  NodeSerDesType.hpp  NodeSerializer.hpp  NodeTypes.hpp  PassThroughNodeCache.hpp
include/rbrntrvll/: AbstractHistoryTree.hpp  AbstractMemoryHistoryTree.hpp  InHistoryTree.hpp  LeafNode.hpp  ThreadedHistoryTree.hpp  ThreadedOutHistoryTree.hpp  basic_types.h  fixed_config.h
include/rbrntrvll/intervals/: AbstractInterval.hpp  FloatInterval.hpp  IntInterval.hpp  NullInterval.hpp  NullIntervalFactory.hpp  StringInterval.hpp  UIntInterval.hpp  UIntIntervalFactory.hpp
librbntrvll/src/: AbstractHistoryTree.cpp  AbstractHistoryTree.hpp  AbstractNode.cpp  AbstractNode.hpp  FloatInterval.cpp  FloatInterval.hpp  FloatIntervalFactory.cpp  FloatIntervalFactory.hpp  HistoryTree.cpp  HistoryTree.hpp  HistoryTreeBackend.cpp  HistoryTreeBackend.hpp  HistoryTreeConfig.hpp  HistoryTreeCoreNode.cpp  HistoryTreeCoreNode.hpp  HistoryTreeIO.cpp  HistoryTreeIO.hpp  HistoryTreeLeafNode.cpp  HistoryTreeLeafNode.hpp  HistoryTreeNode.cpp  HistoryTreeNode.hpp  IIntervalFactory.hpp  IPrintable.hpp  InHistoryTree.cpp  InHistoryTree.hpp  IntInterval.cpp  IntInterval.hpp  IntIntervalFactory.cpp  IntIntervalFactory.hpp  Interval.cpp  Interval.hpp  IntervalCreator.cpp  IntervalCreator.hpp  LeafNode.cpp  Makefile  Makefile.am  Makefile.inc  NullInterval.cpp  NullInterval.hpp  NullIntervalFactory.hpp  (+17 more)
librbntrvll/src/ex/: ExistingIntervalTypeEx.cpp  ExistingIntervalTypeEx.hpp  FactoryOverwritingEx.cpp  FactoryOverwritingEx.hpp  InvalidFormatEx.cpp  InvalidFormatEx.hpp  Makefile  NonexistentFactoryEx.cpp  (+6 more)
src/: AbstractHistory.cpp  AbstractHistoryFile.cpp  AbstractHistoryTree.cpp  AbstractMemoryHistory.cpp  AbstractMemoryHistoryTree.cpp  AbstractNode.cpp  AbstractNode.hpp  AbstractThreadedHistory.cpp  AbstractThreadedHistoryTree.cpp  AbstractThreadedHistoryTree.hpp  CoreNode.cpp  CoreNode.hpp  History.cpp  HistoryFileSink.cpp  HistoryFileSource.cpp  HistoryTree.cpp  HistoryTree.hpp  HistoryTreeCoreNode.hpp  HistoryTreeLeafNode.hpp  InHistory.cpp  InHistoryTree.cpp  InHistoryTree.hpp  IntervalCreator.cpp  LeafNode.cpp  Makefile.am  MemoryHistory.cpp  MemoryHistoryTree.cpp  MemoryHistoryTree.hpp  MemoryInHistory.cpp  MemoryInHistoryTree.cpp  MemoryInHistoryTree.hpp  MemoryOutHistory.cpp  MemoryOutHistoryTree.cpp  MemoryOutHistoryTree.hpp  OutHistory.cpp  OutHistoryTree.cpp  OutHistoryTree.hpp  SConscript  ThreadedHistory.cpp  ThreadedHistoryTree.cpp  (+8 more)
src/ex/: ExistingIntervalTypeEx.cpp  IOEx.cpp  IOEx.hpp  InvalidFormatEx.cpp  NodeFullEx.cpp  NodeFullEx.hpp  TimeRangeEx.cpp  UnknownIntervalType.cpp  UnknownIntervalTypeEx.cpp  UnknownNodeType.cpp  UnknownNodeTypeEx.cpp
src/interval/: AbstractInterval.cpp  IntervalDeserializer.cpp  IntervalSerializer.cpp  IntervalStructs.hpp  StringInterval.cpp
src/intervals/: AbstractInterval.cpp  FloatInterval.cpp  FloatInterval.hpp  FloatIntervalFactory.cpp  IIntervalFactory.hpp  IntInterval.cpp  IntInterval.hpp  IntIntervalFactory.cpp  IntIntervalFactory.hpp  NullInterval.cpp  NullIntervalFactory.cpp  StringInterval.cpp  StringInterval.hpp  StringIntervalFactory.cpp  StringIntervalFactory.hpp  UIntInterval.cpp  UIntIntervalFactory.cpp  UIntIntervalFactory.hpp
src/node/: AbstractNode.cpp  AbstractNodeCache.cpp  AbstractNodeSerDes.cpp  AlignedNodeSerDes.cpp  BranchNode.cpp  DirectMappedNodeCache.cpp  LRUNodeCache.cpp  LeafNode.cpp  LruNodeCache.cpp  Node.cpp  NodeDeserializer.cpp  NodeSerializer.cpp  NodeStructs.hpp
src/tools/: HistoryFileBuildTool.cpp  SConscript
(+99 files in other folders)
