rbrntrvll_includedir = ${includedir}/rbrntrvll
rbrntrvll_include_HEADERS = \
	rbrntrvll/AbstractHistoryTree.hpp \
	rbrntrvll/AbstractMemoryHistoryTree.hpp \
	rbrntrvll/AbstractThreadedHistoryTree.hpp \
	rbrntrvll/HistoryTreeConfig.hpp \
	rbrntrvll/CoreNode.hpp \
	rbrntrvll/HistoryTree.hpp \
	rbrntrvll/LeafNode.hpp \
	rbrntrvll/AbstractNode.hpp \
	rbrntrvll/InHistoryTree.hpp \
	rbrntrvll/IntervalCreator.hpp \
	rbrntrvll/IPrintable.hpp \
	rbrntrvll/MemoryHistoryTree.hpp \
	rbrntrvll/MemoryInHistoryTree.hpp \
	rbrntrvll/MemoryOutHistoryTree.hpp \
	rbrntrvll/OutHistoryTree.hpp \
	rbrntrvll/ThreadedHistoryTree.hpp \
	rbrntrvll/ThreadedInHistoryTree.hpp \
	rbrntrvll/ThreadedOutHistoryTree.hpp \
	rbrntrvll/basic_types.h \
	rbrntrvll/fixed_config.h
	
rbrntrvll_ex_includedir = ${rbrntrvll_includedir}/ex
rbrntrvll_ex_include_HEADERS = \
	rbrntrvll/ex/ExistingIntervalTypeEx.hpp \
	rbrntrvll/ex/InvalidFormatEx.hpp \
	rbrntrvll/ex/IOEx.hpp \
	rbrntrvll/ex/NodeFullEx.hpp \
	rbrntrvll/ex/TimeRangeEx.hpp \
	rbrntrvll/ex/UnknownIntervalTypeEx.hpp \
	rbrntrvll/ex/UnknownNodeTypeEx.hpp

rbrntrvll_intervals_includedir = ${rbrntrvll_includedir}/intervals
rbrntrvll_intervals_include_HEADERS = \
	rbrntrvll/intervals/FloatIntervalFactory.hpp \
	rbrntrvll/intervals/FloatInterval.hpp \
	rbrntrvll/intervals/IIntervalFactory.hpp \
	rbrntrvll/intervals/AbstractInterval.hpp \
	rbrntrvll/intervals/IntIntervalFactory.hpp \
	rbrntrvll/intervals/IntInterval.hpp \
	rbrntrvll/intervals/NullIntervalFactory.hpp \
	rbrntrvll/intervals/NullInterval.hpp \
	rbrntrvll/intervals/StringIntervalFactory.hpp \
	rbrntrvll/intervals/StringInterval.hpp \
	rbrntrvll/intervals/UIntIntervalFactory.hpp \
	rbrntrvll/intervals/UIntInterval.hpp
