lib_LTLIBRARIES = librbrntrvll.la

librbrntrvll_la_CXXFLAGS = -fPIC -Wall -std=gnu++0x -lboost_thread

librbrntrvll_la_SOURCES = \
	AbstractHistoryTree.cpp \
	AbstractHistoryTree.hpp \
	AbstractMemoryHistoryTree.cpp \
	AbstractMemoryHistoryTree.hpp \
	AbstractThreadedHistoryTree.cpp \
	AbstractThreadedHistoryTree.hpp \
	ex/ExistingIntervalTypeEx.cpp \
	ex/ExistingIntervalTypeEx.hpp \
	ex/InvalidFormatEx.cpp \
	ex/InvalidFormatEx.hpp \
	ex/IOEx.cpp \
	ex/IOEx.hpp \
	ex/NodeFullEx.cpp \
	ex/NodeFullEx.hpp \
	ex/TimeRangeEx.cpp \
	ex/TimeRangeEx.hpp \
	ex/UnknownIntervalTypeEx.cpp \
	ex/UnknownIntervalTypeEx.hpp \
	ex/UnknownNodeTypeEx.cpp \
	ex/UnknownNodeTypeEx.hpp \
	HistoryTreeConfig.cpp \
	HistoryTreeConfig.hpp \
	CoreNode.cpp \
	CoreNode.hpp \
	HistoryTree.cpp \
	HistoryTree.hpp \
	LeafNode.cpp \
	LeafNode.hpp \
	AbstractNode.cpp \
	AbstractNode.hpp \
	InHistoryTree.cpp \
	InHistoryTree.hpp \
	IntervalCreator.cpp \
	IntervalCreator.hpp \
	intervals/FloatInterval.cpp \
	intervals/FloatIntervalFactory.cpp \
	intervals/FloatIntervalFactory.hpp \
	intervals/FloatInterval.hpp \
	intervals/IIntervalFactory.hpp \
	intervals/AbstractInterval.cpp \
	intervals/AbstractInterval.hpp \
	intervals/IntInterval.cpp \
	intervals/IntIntervalFactory.cpp \
	intervals/IntIntervalFactory.hpp \
	intervals/IntInterval.hpp \
	intervals/NullInterval.cpp \
	intervals/NullIntervalFactory.cpp \
	intervals/NullIntervalFactory.hpp \
	intervals/NullInterval.hpp \
	intervals/StringInterval.cpp \
	intervals/StringIntervalFactory.cpp \
	intervals/StringIntervalFactory.hpp \
	intervals/StringInterval.hpp \
	intervals/UIntInterval.cpp \
	intervals/UIntIntervalFactory.cpp \
	intervals/UIntIntervalFactory.hpp \
	intervals/UIntInterval.hpp \
	IPrintable.hpp \
	MemoryHistoryTree.cpp \
	MemoryHistoryTree.hpp \
	MemoryInHistoryTree.cpp \
	MemoryInHistoryTree.hpp \
	MemoryOutHistoryTree.cpp \
	MemoryOutHistoryTree.hpp \
	OutHistoryTree.cpp \
	OutHistoryTree.hpp \
	ThreadedHistoryTree.cpp \
	ThreadedHistoryTree.hpp \
	ThreadedInHistoryTree.cpp \
	ThreadedInHistoryTree.hpp \
	ThreadedOutHistoryTree.cpp \
	ThreadedOutHistoryTree.hpp
