lib_LTLIBRARIES = librbrntrvll.la

librbrntrvll_la_CXXFLAGS = \
	-fPIC \
	-Wall \
	-std=gnu++0x \
	-lboost_thread \
	-I$(top_srcdir)/include

librbrntrvll_la_SOURCES = \
	AbstractHistoryTree.cpp \
	AbstractMemoryHistoryTree.cpp \
	AbstractThreadedHistoryTree.cpp \
	ex/ExistingIntervalTypeEx.cpp \
	ex/InvalidFormatEx.cpp \
	ex/IOEx.cpp \
	ex/NodeFullEx.cpp \
	ex/TimeRangeEx.cpp \
	ex/UnknownIntervalTypeEx.cpp \
	ex/UnknownNodeTypeEx.cpp \
	HistoryTreeConfig.cpp \
	CoreNode.cpp \
	HistoryTree.cpp \
	LeafNode.cpp \
	AbstractNode.cpp \
	InHistoryTree.cpp \
	IntervalCreator.cpp \
	intervals/FloatInterval.cpp \
	intervals/FloatIntervalFactory.cpp \
	intervals/AbstractInterval.cpp \
	intervals/IntInterval.cpp \
	intervals/IntIntervalFactory.cpp \
	intervals/NullInterval.cpp \
	intervals/NullIntervalFactory.cpp \
	intervals/StringInterval.cpp \
	intervals/StringIntervalFactory.cpp \
	intervals/UIntInterval.cpp \
	intervals/UIntIntervalFactory.cpp \
	MemoryHistoryTree.cpp \
	MemoryInHistoryTree.cpp \
	MemoryOutHistoryTree.cpp \
	OutHistoryTree.cpp \
	ThreadedHistoryTree.cpp \
	ThreadedInHistoryTree.cpp \
	ThreadedOutHistoryTree.cpp

