lib_LTLIBRARIES = librbrntrvll.la

librbrntrvll_la_CXXFLAGS = -fPIC -Wall -std=gnu++0x

librbrntrvll_la_SOURCES = \
	AbstractHistoryTree.cpp \
	AbstractHistoryTree.hpp \
	ex/ExistingIntervalTypeEx.cpp \
	ex/ExistingIntervalTypeEx.hpp \
	ex/InvalidFormatEx.cpp \
	ex/InvalidFormatEx.hpp \
	ex/IOEx.cpp \
	ex/IOEx.hpp \
	ex/NodeFullEx.cpp \
	ex/NodeFullEx.hpp \
	ex/TimeRangeEx.cpp \
	ex/TimeRangeEx.hpp \
	ex/UnknownIntervalTypeEx.cpp \
	ex/UnknownIntervalTypeEx.hpp \
	ex/UnknownNodeTypeEx.cpp \
	ex/UnknownNodeTypeEx.hpp \
	HistoryTreeConfig.cpp \
	HistoryTreeConfig.hpp \
	HistoryTreeCoreNode.cpp \
	HistoryTreeCoreNode.hpp \
	HistoryTree.cpp \
	HistoryTree.hpp \
	HistoryTreeLeafNode.cpp \
	HistoryTreeLeafNode.hpp \
	HistoryTreeNode.cpp \
	HistoryTreeNode.hpp \
	InHistoryTree.cpp \
	InHistoryTree.hpp \
	IntervalCreator.cpp \
	IntervalCreator.hpp \
	intervals/FloatInterval.cpp \
	intervals/FloatIntervalFactory.cpp \
	intervals/FloatIntervalFactory.hpp \
	intervals/FloatInterval.hpp \
	intervals/IIntervalFactory.hpp \
	intervals/Interval.cpp \
	intervals/Interval.hpp \
	intervals/IntInterval.cpp \
	intervals/IntIntervalFactory.cpp \
	intervals/IntIntervalFactory.hpp \
	intervals/IntInterval.hpp \
	intervals/NullInterval.cpp \
	intervals/NullIntervalFactory.cpp \
	intervals/NullIntervalFactory.hpp \
	intervals/NullInterval.hpp \
	intervals/StringInterval.cpp \
	intervals/StringIntervalFactory.cpp \
	intervals/StringIntervalFactory.hpp \
	intervals/StringInterval.hpp \
	intervals/UIntInterval.cpp \
	intervals/UIntIntervalFactory.cpp \
	intervals/UIntIntervalFactory.hpp \
	intervals/UIntInterval.hpp \
	IPrintable.hpp \
	OutHistoryTree.cpp \
	OutHistoryTree.hpp 
